--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Please use python V 3.7 to be compatible with all packages
 gpytorch==1.5.0
-torch==1.9.0
+#torch==1.9.0
 scikit-learn==0.24.2
 pyyaml==5.4.1
 seaborn==0.11.2
