--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,cuda
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode,cuda
 
+### Other Stuff ###
+*/models_diff/*
+wandb/*
+
 ### CUDA ###
 *.i
 *.ii
