models shall be uploaded

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode,cuda
 
 ### Other Stuff ###
-*/models_diff/*
+#*/models_diff/*
 wandb/*
 
 ### CUDA ###
